--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,16 +3,24 @@
         "browser": true,
         "es2021": true
     },
-    "extends": "plugin:react/recommended",
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended"
+    ],
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
         },
-        "ecmaVersion": 2019,
+        "ecmaVersion": 2021,
         "sourceType": "module"
     },
     "plugins": [
         "react"
     ],
-    "rules": {}
+    "rules": {
+        "indent": [2, 2],
+        "eol-last": "error",
+        "space-in-parens": ["warn", "always"],
+        "brace-style": 1
+    }
 }
