--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,16 @@
 {
     "env": {
+        "node": true,
         "browser": true,
         "es2021": true
     },
     "extends": [
         "eslint:recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended",
         "plugin:react/recommended"
     ],
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
@@ -14,14 +18,22 @@
         "ecmaVersion": 2021,
         "sourceType": "module"
     },
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
     "plugins": [
-        "react"
+        "react",
+        "@typescript-eslint"
     ],
     "rules": {
         "indent": [2, 2],
         "eol-last": "error",
         "space-in-parens": ["warn", "always"],
         "brace-style": 1,
-        "react/react-in-jsx-scope": "off"
+        "react/react-in-jsx-scope": "off",
+        "react/prop-types": "off",
+        "@typescript-eslint/no-empty-function": "off"
     }
 }
